--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build:ssr:enso": "ng build --configuration=production && ng run enso:server:production",
     "serve:ssr:enso": "node dist/enso/server/server.mjs"
   },
   "prettier": {
