--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
     "express": "^5.1.0",
+    "firebase": "^12.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
